src/test/resources/refCompilerOutput/invalid/syntaxErr/variables/bigIntAssignment.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Integer value 2200000000 on line 12 is badly formatted (either it has a badly defined sign or it is too large for a 32-bit signed integer)
Parsing aborted, no further compilation attempted.
